# crewai_fruad_detection

./: README.md
crewai_fruad_detection/: .gitignore  pyproject.toml  requirements.txt
crewai_fruad_detection/src/crewai_fruad_detection/: crew.py  main.py
crewai_fruad_detection/src/crewai_fruad_detection/config/: agents.yaml  tasks.yaml
